--- a/portfolio.html
+++ b/portfolio.html
@@ -15,181 +15,235 @@
 
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
-    <header>
-      <nav>
-        <!-- logo -->
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="list">
-          <li><a href="./index.html" class="menu-item link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="menu-item link">Portfolio</a>
-          </li>
-          <li><a href="" class="menu-item link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="adress">
-        <ul class="list">
-          <li class="adress-link">
-            <a href="mailto:info@devstudio.com" class="adress-item link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="adress-link">
-            <a href="tel:+110001111111" class="adress-item link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+  <body class="wrapper">
+    <header class="header-box">
+      <div class="container transform">
+        <nav class="transform">
+          <!-- logo -->
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-header">Studio</span></a
+          >
+
+          <ul class="list transform">
+            <li class="menu-link">
+              <a href="./index.html" class="menu-item link">Studio</a>
+            </li>
+            <li class="menu-link">
+              <a href="./portfolio.html" class="menu-item link">Portfolio</a>
+            </li>
+            <li class="menu-link">
+              <a href="" class="menu-item link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress">
+          <ul class="list transform">
+            <li class="adress-link">
+              <a href="mailto:info@devstudio.com" class="adress-item link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-link">
+              <a href="tel:+110001111111" class="adress-item link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
-      <section>
-        <h1 hidden>our working</h1>
-        <!-- filter -->
-        <ul class="list">
-          <li>
-            <button type="button" class="button filter-button">All</button>
-          </li>
-          <li>
-            <button type="button" class="button filter-button">Web Site</button>
-          </li>
-          <li>
-            <button type="button" class="button filter-button">App</button>
-          </li>
-          <li>
-            <button type="button" class="button filter-button">Design</button>
-          </li>
-          <li>
-            <button type="button" class="button filter-button">
-              Marketing
-            </button>
-          </li>
-        </ul>
-        <!-- application -->
-        <ul class="list">
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/banking-app.jpg"
-                alt="banking app"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Banking App Interface Concept</h2>
-              <p class="category-working">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/cashlessi-payment.jpg"
-                alt="cashlessi payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Cashless Payment</h2>
-              <p class="category-working">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/meditation-app.jpg"
-                alt="meditation app"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Meditation App</h2>
-              <p class="category-working">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/taxi-service.jpg"
-                alt="taxi service"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Taxi Service</h2>
-              <p class="category-working">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/screen-illustrations.jpg"
-                alt="screen illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Screen Illustrations</h2>
-              <p class="category-working">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/online-courses.jpg"
-                alt="online courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Online Courses</h2>
-              <p class="category-working">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/instagram-stories-concept.jpg"
-                alt="instagram stories concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Instagram Stories Concept</h2>
-              <p class="category-working">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/organic-food.jpg"
-                alt="organic food"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Organic Food</h2>
-              <p class="category-working">Web Site</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/fresh-coffee.jpg"
-                alt="fresh coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="name-working">Fresh Coffee</h2>
-              <p class="category-working">Web Site</p></a
-            >
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h1 hidden>our working</h1>
+          <!-- filter -->
+          <div class="filter-box">
+            <ul class="list">
+              <li class="filter-item">
+                <button type="button" class="button filter-button">All</button>
+              </li>
+              <li class="filter-item">
+                <button type="button" class="button filter-button">
+                  Web Site
+                </button>
+              </li>
+              <li class="filter-item">
+                <button type="button" class="button filter-button">App</button>
+              </li>
+              <li class="filter-item">
+                <button type="button" class="button filter-button">
+                  Design
+                </button>
+              </li>
+              <li class="filter-item">
+                <button type="button" class="button filter-button">
+                  Marketing
+                </button>
+              </li>
+            </ul>
+          </div>
+          <!-- application -->
+          <ul class="list transform">
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/banking-app.jpg"
+                    alt="banking app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Banking App Interface Concept</h2>
+                    <p class="category-working">App</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/cashlessi-payment.jpg"
+                    alt="cashlessi payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Cashless Payment</h2>
+                    <p class="category-working">Marketing</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/meditation-app.jpg"
+                    alt="meditation app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Meditation App</h2>
+                    <p class="category-working">App</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/taxi-service.jpg"
+                    alt="taxi service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Taxi Service</h2>
+                    <p class="category-working">Marketing</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/screen-illustrations.jpg"
+                    alt="screen illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Screen Illustrations</h2>
+                    <p class="category-working">Design</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/online-courses.jpg"
+                    alt="online courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Online Courses</h2>
+                    <p class="category-working">Marketing</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/instagram-stories-concept.jpg"
+                    alt="instagram stories concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Instagram Stories Concept</h2>
+                    <p class="category-working">Design</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/organic-food.jpg"
+                    alt="organic food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Organic Food</h2>
+                    <p class="category-working">Web Site</p>
+                  </div></a
+                >
+              </div>
+            </li>
+            <li class="app-cards">
+              <div class="card-box">
+                <a href="" class="link">
+                  <img
+                    src="./images/portfolio/fresh-coffee.jpg"
+                    alt="fresh coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="card-content">
+                    <h2 class="name-working">Fresh Coffee</h2>
+                    <p class="category-working">Web Site</p>
+                  </div></a
+                >
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-desc">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-box">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-desc">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
