--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфоліо</title>
+    <title>Document</title>
+    <!-- modern-normolize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +25,7 @@
       <div class="container transform">
         <nav class="transform">
           <!-- logo -->
-          <a href="./index.html" class="logo link"
+          <a href="./index.html" class="logo link link-header"
             >Web<span class="logo-header">Studio</span></a
           >
 
@@ -55,8 +60,8 @@
 
     <main>
       <section class="section">
+        <h1 hidden>our working</h1>
         <div class="container">
-          <h1 hidden>our working</h1>
           <!-- filter -->
           <div class="filter-box">
             <ul class="list">
@@ -86,8 +91,8 @@
           <!-- application -->
           <ul class="list transform">
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/banking-app.jpg"
                     alt="banking app"
@@ -97,13 +102,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Banking App Interface Concept</h2>
                     <p class="category-working">App</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/cashlessi-payment.jpg"
                     alt="cashlessi payment"
@@ -113,13 +118,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Cashless Payment</h2>
                     <p class="category-working">Marketing</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/meditation-app.jpg"
                     alt="meditation app"
@@ -129,13 +134,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Meditation App</h2>
                     <p class="category-working">App</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/taxi-service.jpg"
                     alt="taxi service"
@@ -145,13 +150,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Taxi Service</h2>
                     <p class="category-working">Marketing</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/screen-illustrations.jpg"
                     alt="screen illustrations"
@@ -161,13 +166,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Screen Illustrations</h2>
                     <p class="category-working">Design</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/online-courses.jpg"
                     alt="online courses"
@@ -177,13 +182,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Online Courses</h2>
                     <p class="category-working">Marketing</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/instagram-stories-concept.jpg"
                     alt="instagram stories concept"
@@ -193,13 +198,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Instagram Stories Concept</h2>
                     <p class="category-working">Design</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/organic-food.jpg"
                     alt="organic food"
@@ -209,13 +214,13 @@
                   <div class="card-content">
                     <h2 class="name-working">Organic Food</h2>
                     <p class="category-working">Web Site</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
             <li class="app-cards">
-              <div class="card-box">
-                <a href="" class="link">
+              <a href="" class="link"
+                ><div class="card-box">
                   <img
                     src="./images/portfolio/fresh-coffee.jpg"
                     alt="fresh coffee"
@@ -225,9 +230,9 @@
                   <div class="card-content">
                     <h2 class="name-working">Fresh Coffee</h2>
                     <p class="category-working">Web Site</p>
-                  </div></a
-                >
-              </div>
+                  </div>
+                </div></a
+              >
             </li>
           </ul>
         </div>
@@ -235,8 +240,8 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="footer-box">
-        <a href="./index.html" class="logo link"
+      <div class="footer-box container">
+        <a href="./index.html" class="logo link link-footer"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-desc">
