--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- modern-normolize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +26,7 @@
       <div class="container transform">
         <nav class="transform">
           <!-- logo -->
-          <a href="./index.html" class="logo link"
+          <a href="./index.html" class="logo link link-header"
             >Web<span class="logo-header">Studio</span></a
           >
 
@@ -56,7 +61,7 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <div class="hero-box">
+        <div class="hero-box container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button hero-button">
             Order Service
@@ -124,7 +129,7 @@
       <section class="team section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
-          <ul class="list transform">
+          <ul class="list list-worker">
             <li class="worker">
               <img
                 src="./images/guerrero.jpg"
@@ -167,8 +172,8 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="footer-box">
-        <a href="./index.html" class="logo link"
+      <div class="footer-box container">
+        <a href="./index.html" class="logo link link-footer"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-desc">
