--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container transform">
         <nav class="transform">
           <!-- logo -->
-          <a href="./index.html" class="logo link link-header"
+          <a href="./index.html" class="logo link"
             >Web<span class="logo-header">Studio</span></a
           >
 
@@ -105,7 +105,7 @@
         </div>
       </section>
       <!-- work -->
-      <section class="work section">
+      <section class="work-section">
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="list transform">
@@ -173,7 +173,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="footer-box container">
-        <a href="./index.html" class="logo link link-footer"
+        <a href="./index.html" class="logo link"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-desc">
