--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       <div class="container transform">
         <nav class="transform">
           <!-- logo -->
-          <a href="./index.html" class="logo link link-header"
+          <a href="./index.html" class="logo link"
             >Web<span class="logo-header">Studio</span></a
           >
 
@@ -59,7 +59,7 @@
     </header>
 
     <main>
-      <section class="section">
+      <section class="section-app">
         <h1 hidden>our working</h1>
         <div class="container">
           <!-- filter -->
@@ -241,7 +241,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="footer-box container">
-        <a href="./index.html" class="logo link link-footer"
+        <a href="./index.html" class="logo link"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-desc">
