--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body class="wrapper">
     <!-- header  -->
-    <header class="header-box">
-      <div class="container transform">
+    <header class="header">
+      <div class="container transform header-box">
         <nav class="transform">
           <!-- logo -->
           <a href="./index.html" class="logo link"
