--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="wrapper">
-    <header class="header-box">
-      <div class="container transform">
+    <header class="header">
+      <div class="container transform header-box">
         <nav class="transform">
           <!-- logo -->
           <a href="./index.html" class="logo link"
@@ -61,8 +61,8 @@
     <main>
       <section class="section-app">
         <h1 hidden>our working</h1>
+        <!-- filter -->
         <div class="container">
-          <!-- filter -->
           <div class="filter-box">
             <ul class="list">
               <li class="filter-item">
