--- a/portfolio.html
+++ b/portfolio.html
@@ -62,33 +62,31 @@
       <section class="section-app">
         <h1 hidden>our working</h1>
 
+        <!-- filter -->
+        <div class="filter-box container">
+          <ul class="list">
+            <li class="filter-item">
+              <button type="button" class="button filter-button">All</button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button filter-button">
+                Web Site
+              </button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button filter-button">App</button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button filter-button">Design</button>
+            </li>
+            <li class="filter-item">
+              <button type="button" class="button filter-button">
+                Marketing
+              </button>
+            </li>
+          </ul>
+        </div>
         <div class="container">
-          <!-- filter -->
-          <div class="filter-box">
-            <ul class="list">
-              <li class="filter-item">
-                <button type="button" class="button filter-button">All</button>
-              </li>
-              <li class="filter-item">
-                <button type="button" class="button filter-button">
-                  Web Site
-                </button>
-              </li>
-              <li class="filter-item">
-                <button type="button" class="button filter-button">App</button>
-              </li>
-              <li class="filter-item">
-                <button type="button" class="button filter-button">
-                  Design
-                </button>
-              </li>
-              <li class="filter-item">
-                <button type="button" class="button filter-button">
-                  Marketing
-                </button>
-              </li>
-            </ul>
-          </div>
           <!-- application -->
           <ul class="list transform">
             <li class="app-cards">
