--- a/portfolio.html
+++ b/portfolio.html
@@ -60,11 +60,12 @@
 
     <main>
       <section class="section-app">
-        <h1 hidden>our working</h1>
+        <div class="container">
+          <h1 hidden>our working</h1>
 
-        <!-- filter -->
-        <div class="filter-box container">
-          <ul class="list">
+          <!-- filter -->
+
+          <ul class="list filter-list">
             <li class="filter-item">
               <button type="button" class="button filter-button">All</button>
             </li>
@@ -85,8 +86,7 @@
               </button>
             </li>
           </ul>
-        </div>
-        <div class="container">
+
           <!-- application -->
           <ul class="list transform">
             <li class="app-cards">
