--- a/portfolio.html
+++ b/portfolio.html
@@ -90,148 +90,130 @@
           <!-- application -->
           <ul class="list transform">
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/banking-app.jpg"
-                    alt="banking app"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Banking App Interface Concept</h2>
-                    <p class="category-working">App</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="banking app"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Banking App Interface Concept</h2>
+                  <p class="category-working">App</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/cashlessi-payment.jpg"
-                    alt="cashlessi payment"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Cashless Payment</h2>
-                    <p class="category-working">Marketing</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/cashlessi-payment.jpg"
+                  alt="cashlessi payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Cashless Payment</h2>
+                  <p class="category-working">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/meditation-app.jpg"
-                    alt="meditation app"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Meditation App</h2>
-                    <p class="category-working">App</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/meditation-app.jpg"
+                  alt="meditation app"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Meditation App</h2>
+                  <p class="category-working">App</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/taxi-service.jpg"
-                    alt="taxi service"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Taxi Service</h2>
-                    <p class="category-working">Marketing</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/taxi-service.jpg"
+                  alt="taxi service"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Taxi Service</h2>
+                  <p class="category-working">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/screen-illustrations.jpg"
-                    alt="screen illustrations"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Screen Illustrations</h2>
-                    <p class="category-working">Design</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/screen-illustrations.jpg"
+                  alt="screen illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Screen Illustrations</h2>
+                  <p class="category-working">Design</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/online-courses.jpg"
-                    alt="online courses"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Online Courses</h2>
-                    <p class="category-working">Marketing</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/online-courses.jpg"
+                  alt="online courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Online Courses</h2>
+                  <p class="category-working">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/instagram-stories-concept.jpg"
-                    alt="instagram stories concept"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Instagram Stories Concept</h2>
-                    <p class="category-working">Design</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/instagram-stories-concept.jpg"
+                  alt="instagram stories concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Instagram Stories Concept</h2>
+                  <p class="category-working">Design</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/organic-food.jpg"
-                    alt="organic food"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Organic Food</h2>
-                    <p class="category-working">Web Site</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/organic-food.jpg"
+                  alt="organic food"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Organic Food</h2>
+                  <p class="category-working">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="app-cards">
-              <a href="" class="link"
-                ><div class="card-box">
-                  <img
-                    src="./images/portfolio/fresh-coffee.jpg"
-                    alt="fresh coffee"
-                    width="360"
-                    height="300"
-                  />
-                  <div class="card-content">
-                    <h2 class="name-working">Fresh Coffee</h2>
-                    <p class="category-working">Web Site</p>
-                  </div>
-                </div></a
-              >
+              <a href="" class="link card-box">
+                <img
+                  src="./images/portfolio/fresh-coffee.jpg"
+                  alt="fresh coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-content">
+                  <h2 class="name-working">Fresh Coffee</h2>
+                  <p class="category-working">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
